<?xml version="1.0"?>
<package format="3">
  <name>racecar</name>
  <version>0.0.1</version>
  <description>RACECAR launch scripts</description>

  <author>Michael Boulet</author>
  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>ament_python</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <!-- <run_depend>razor_imu_9dof</run_depend> -->
  <run_depend>tf2_ros</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rviz2</run_depend>

  <!-- specific to racecar-v2 -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
